--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,8 +15,9 @@ jobs:
   build-container:
     name: Build test container
     timeout-minutes: 30
-    runs-on: [self-hosted, builder]
-    # runs-on: ubuntu-latest
+    # runs-on: [self-hosted, builder]
+    # Let people build in their fork
+    runs-on: ubuntu-latest
     env:
       REGISTRY: us-east4-docker.pkg.dev/weave-support-367421/weave-images
     steps:
